Make JWT token visible and readable and correct

--- a/react-social/src/user/profile/Profile.css
+++ b/react-social/src/user/profile/Profile.css
@@ -41,3 +41,7 @@
     color: #fff;
     font-size: 3em;
 }
+
+.word-wrap {
+    word-wrap: break-word;
+}
